Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam voluptates voluptatibus consequuntur, tempore cum error aut quaerat aliquam dolore omnis quos inventore adipisci fuga. Temporibus et optio impedit expedita?</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, repudiandae enim! Porro consequatur quaerat iste voluptatibus inventore error voluptate unde nisi totam fugit necessitatibus laboriosam, nihil dicta eveniet laborum saepe?</p>
 </body>
 </html>
